Fix HTML structure and update footer year

--- a/html.html
+++ b/html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Tutorial - DevLearn</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/html.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="html.css">
 </head>
 <body>
     <!-- Header -->
@@ -173,11 +173,12 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 DevLearn. All rights reserved.</p>
+                <p>&copy; 2025 DevLearn. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="scripts/html.js"></script>
+    <script src="html.js"></script>
 </body>
+
 </html>
