--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevLearn - Complete Web Development Tutorials</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- Header -->
@@ -185,11 +185,12 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 DevLearn. All rights reserved.</p>
+                <p>&copy; 2025 DevLearn. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
