--- a/javascript.html
+++ b/javascript.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Tutorial - DevLearn</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/javascript.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="javascript.css">
 </head>
 <body>
     <!-- Header -->
@@ -222,11 +222,12 @@ container.appendChild(button);</textarea>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 DevLearn. All rights reserved.</p>
+                <p>&copy; 2025 DevLearn. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="scripts/javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
+
 </html>
