--- a/css.html
+++ b/css.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Tutorial - DevLearn</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/css.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <!-- Header -->
@@ -216,11 +216,12 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 DevLearn. All rights reserved.</p>
+                <p>&copy; 2025 DevLearn. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="scripts/css.js"></script>
+    <script src="css.js"></script>
 </body>
+
 </html>
